fixed social size and spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -382,8 +382,9 @@ ul.task-list input[type="checkbox"] {
   text-align: center;
 
   .contact-icons {
-    font-size: 2rem;
+    font-size: 2.5rem;
     a {
+      padding: 0.3rem;
       i::before {
         color: var(--global-text-color);
         transition-property: all 0.2s ease-in-out;
